# inverse-suitability

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: reproduce.yml
inverse_suitability/: cli.py  identification.py  latent_validation.py  synthetic_latent.py
inverse_suitability/fitters/: __init__.py  latent_factor.py
paper/: .gitignore  LICENSE  Makefile  appendix.tex  main.tex  refs.bib
paper/reproducibility/: README.md  gen_figure.py  gen_results_tex.py  run.sh
paper/sections/: 01-intro.tex  02-related.tex  03-model.tex  04-identification.tex  05-synthetic-recovery.tex  06-atlas.tex  07-governance.tex  08-discussion.tex  09-conclusion.tex  10-availability.tex  abstract.tex  results.tex
src/inverse_suitability/: __init__.py  latent_demo.py  latent_math.py
