[project]
name = "inverse-suitability"
version = "0.1.0"
description = "Inverse Suitability -- synthetic-recovery reproducibility package (continuous-item IRT, latent-factor M4 method)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fabio Carucci", email = "research@goable.io" }]

# Slim, public subset. NOT the full engine: no pyarrow/psycopg/sklearn/
# statsmodels/numpyro/jax -- only what latent-demo + the figure script need.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "click>=8.1",
    "matplotlib>=3.8",   # only for reproducibility/gen_figure.py
]

[project.scripts]
inverse-suitability = "inverse_suitability.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inverse_suitability"]
