[project]
name = "inverse-suitability"
version = "0.1.0"
description = "Inverse Suitability -- continuous-item IRT calibration: identify condition difficulty and rider skill from behavioural outcomes. Canonical method + synthetic-recovery reproducibility."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fabio Carucci", email = "research@goable.io" }]

# Lean by design: the method needs only numpy/scipy/pandas. None of the private
# engine's heavy stack (pyarrow/psycopg/sklearn/statsmodels/numpyro/jax).
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "click>=8.1",
    "matplotlib>=3.8",   # only for reproducibility/gen_figure.py
]

[project.scripts]
inverse-suitability = "inverse_suitability.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inverse_suitability"]
